# DevOps-Course-Starter

./: .dockerignore  .env.template  .env.test  Dockerfile  README.md  pyproject.toml  test-output.xml
.github/workflows/: test.yaml
ansible/: .env.j2  inventory.ini  playbook.yml
todo_app/: app.py
todo_app/data/: session_items.py  trello_items.py
todo_app/helpers/: item_class.py  item_class_helper.py  list_id_helper.py  trello_items.py  view_class.py
todo_app/templates/: index.html
todo_app/tests/: test_app.py  test_view_model.py
